2004-07-04(Sun) 16:15:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix character code bugs


2004-07-03(Sat) 03:25:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : added

	* nadokarc : add default join channel '#nadoka_check'


2004-06-01(Tue) 16:51:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/checkbot.nb : added(incomplete)

	* plugins/rss_check.nb : change notice format

	* ndk_client.rb : fix login messages(commands)


2004-05-14(Fri) 02:36:04 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix part process at enter_away


2004-05-14(Fri) 02:27:06 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb(canonical_channel_name) : added
	and all configuration keys of channel information are canonical

	* ndk_state.rb(canonical_channel_name) : added
	and all state keys of channel are canonical


2004-05-09(Sun) 18:11:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : correct command to clients


2004-05-09(Sun) 17:27:46 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : change away nick lag time to 2 sec


2004-05-09(Sun) 16:46:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* rice/irc.rb : fix some regexp bugs

	* ndk_client.rb(send_motd) : use client original nick

	* ndk_client.rb ; check io is still open

	* plugins/rss_check.nb : change string compare operator
	from '=~' to '=='


2004-05-09(Sun) 03:33:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb, ndk_state.rb(nick_succ) :
	change nick.succ algorithm and timing(always change)

	* ndk_manager.rb : refactoring around nick and away nick

	* ndk_config.rb : change login timing action default
	to do nothing


2004-05-05(Wed) 17:19:14 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_version.rb : 0.5.5 prepared


2004-05-05(Wed) 16:24:03 +0900  Koichi Sasada  <ko1@atdot.net>

	* ChangeLog : change date format

	* 0.5.4 released


Sun, 02 May 2004 03:34:54 +0900  Koichi Sasada  <ko1@atdot.net>
